# sonic-platform-common

./: .artifactignore  .bazelrc  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  Makefile  README.md  ThirdPartyLicenses.txt  azure-pipelines.yml  dummy_test_file.txt  pyproject.toml  pytest.ini  setup.py  sonic_eeprom  sonic_sfp  test_credo_aec_800g.py
sonic_platform_base/: BUILD.bazel  __init__.py  bmc-fw-update.py  bmc_base.py  bmc_fw_update.py  bmc_watchdog.py  card_base.py  chassis_base.py  component_base.py  device_base.py  fan_base.py  fan_drawer_base.py  isensor_base.py  led_base.py  liquid_cooling_base.py  local_users_passwords_reset_base.py  module_base.py  pcie_base.py  pdb_base.py  platform_base.py  psu_base.py  redfish_client.py  sed_mgmt_base.py  sensor_base.py  sensor_fs.py  sfp_base.py  sfp_standard.py  thermal_base.py  vsensor_base.py  watchdog_base.py
sonic_platform_base/sonic_eeprom/: BUILD.bazel  eeprom_base.py  eeprom_dts.py  eeprom_tlvinfo.py
sonic_platform_base/sonic_pcie/: BUILD.bazel  pcie_base.py  pcie_common.py
sonic_platform_base/sonic_sfp/: BUILD.bazel  bcmshell.py  ext_media_api.py  ext_media_cmis_diag.py  ext_media_cmis_init.py  ext_media_common.py  ext_media_handler_base.py  ext_media_handler_qsfp28.py  ext_media_handler_qsfp28_dd.py  ext_media_handler_qsfp56_dd.py  ext_media_handler_qsfp_plus.py  ext_media_handler_sfp.py  ext_media_handler_sfp28.py  ext_media_handler_sfp56_dd.py  ext_media_handler_sfp_plus.py  ext_media_utils.py  inf8628.py  qsfp_dd.py  sff8024.py  sff8436.py  sff8472.py  sffbase.py  sfputilbase.py  sfputilhelper.py
sonic_platform_base/sonic_ssd/: ssd_base.py  ssd_emmc.py  ssd_generic.py  storage_base.py  storage_common.py
sonic_platform_base/sonic_storage/: BUILD.bazel  emmc.py  ssd.py  storage_base.py  storage_common.py  storage_devices.py  usb.py
sonic_platform_base/sonic_thermal_control/: .gitignore  BUILD.bazel  thermal_action_base.py  thermal_actions.py  thermal_condition_base.py  thermal_conditions.py  thermal_info_base.py  thermal_infos.py  thermal_json_object.py  thermal_manager_base.py  thermal_policy.py
sonic_platform_base/sonic_xcvr/: BUILD.bazel  bailly_optoe_base.py  cpo_api_factory.py  cpo_base.py  cpo_optoe_base.py  cpo_xcvr_api_factory.py  eeprom_access.py  eeprom_rw.py  optoe_eeprom_access.py  optoe_eeprom_rw.py  sfp_optoe_base.py  xcvr_api_factory.py  xcvr_eeprom.py
sonic_platform_base/sonic_xcvr/api/: cdb_capable_mixin.py  coh_optic_api.py  xcvr_api.py
sonic_platform_base/sonic_xcvr/api/amphenol/: backplane.py
sonic_platform_base/sonic_xcvr/api/arista/: cmis_enhanced_lpo.py
sonic_platform_base/sonic_xcvr/api/bailly/: bailly_api.py
sonic_platform_base/sonic_xcvr/api/broadcom/: bailly.py  bailly_rlm.py  davisson_elsfp.py  davisson_oe.py
sonic_platform_base/sonic_xcvr/api/credo/: aec_800g.py
sonic_platform_base/sonic_xcvr/api/hisense/: aoc_2x100g.py
sonic_platform_base/sonic_xcvr/api/innolight/: fr8_800g.py  fr_800g.py
sonic_platform_base/sonic_xcvr/api/nvidia/: cpo_els.py  cpo_oe.py
sonic_platform_base/sonic_xcvr/cdb/: cdb.py  cdb_fw.py  cdb_pm.py  cdb_vcs.py
sonic_platform_base/sonic_xcvr/codes/: xcvr_codes.py
sonic_platform_base/sonic_xcvr/cpo/: cpo_api_factory.py  cpo_base.py  cpo_optoe_base.py  elsfp.py  oe.py
sonic_platform_base/sonic_xcvr/fields/: arista_lpo_consts.py  cdb_consts.py  cmis_enhanced_lpo.py  consts.py  elsfp_consts.py  scale_consts.py  xcvr_field.py
sonic_platform_base/sonic_xcvr/mem_maps/: xcvr_mem_map.py
sonic_platform_base/sonic_xcvr/utils/: __init__.py  cache.py
sonic_y_cable/: BUILD.bazel  y_cable.py  y_cable_base.py  y_cable_vendor_mapping.py
sonic_y_cable/broadcom/: y_cable_braodcom.py  y_cable_broadcom.py
sonic_y_cable/credo/: y_cable_credo.py
sonic_y_cable/microsoft/: README  y_cable_simulated.py
tests/: BUILD.bazel  bmc_base_test.py  bmc_fw_update_test.py  bmc_watchdog_test.py  chassis_base_test.py  component_base_test.py  eeprom_base_test.py  eeprom_tlvinfo_test.py  fan_base_test.py  led_base_test.py  liquid_cooling_base_test.py  local_users_passwords_reset_base_test.py  mock_platform.py  module_base_test.py  pcie_common_test.py  pdb_base_test.py  psu_base_test.py  read_port_mappings_test.py  redfish_client_test.py  sed_mgmt_base_test.py  sensor_base_test.py  sensor_fs_test.py  sfp_base_test.py  sfputilhelper_test.py  ssd_emmc_test.py  ssd_generic_test.py  syseeprom.hex  syseeprom_v2.hex  t0-sample-port-config.ini  test_eeprom  test_emmc.py  test_ssd.py  test_storage_common.py  test_storage_devices.py  test_thermal_policy.py  test_usb.py  thermal_manager_test.py  thermal_policy.json
tests/0/: port_config.ini
tests/1/: port_config.ini
tests/mock_data/: mock_bmc_debug_log_dump_response  mock_bmc_empty_response  mock_bmc_empty_response_auth_failure  mock_bmc_get_account_service_response  mock_bmc_login_token_response  mock_bmc_logout_response  mock_bmc_set_min_password_length_failure_response  mock_bmc_set_min_password_length_success_response  mock_bmc_task_query_valid_debug_log_dump  mock_change_bmc_login_password_success_response  mock_firmware_update_response  mock_firmware_update_task_complete  mock_get_bmc_eeprom_response  mock_get_bmc_info_response  mock_get_eeprom_list_response  mock_get_firmware_list_response  mock_parsed_bmc_eeprom_dict  mock_session_service_sessions_response
tests/mocked_libs/: blkinfo.py  psutil.py
tests/platform_json/: hwsku.json  hwsku_role.json  platform.json
tests/sonic_xcvr/: conftest.py  eeprom_utils.py  test_aoc_2x100g.py  test_bailly_cmis.py  test_bailly_optoe_base.py  test_ccmis.py  test_cdb.py  test_cdb_fw.py  test_cmis.py  test_cmisCDB.py  test_cmisTargetFWUpgrade.py  test_cmisVDM.py  test_cmis_cache.py  test_cmis_enhanced_lpo.py  test_cpo_aggregator.py  test_cpo_api_factory.py  test_cpo_base.py  test_eeprom_rw.py  test_elsfp.py  test_fr_800g.py  test_nvidia_cpo_els.py  test_nvidia_cpo_factory.py  test_nvidia_cpo_oe.py  test_oe.py  test_sff8436.py  test_sff8472.py  test_sff8636.py  test_sfp_base.py  test_sfp_optoe_base.py  test_xcvr_api_factory.py  test_xcvr_eeprom.py  test_xcvr_field.py
(+228 files in other folders)
