module(name = "sonic-platform-common")

bazel_dep(name = "rules_python", version = "1.0.0")
bazel_dep(name = "aspect_rules_py", version = "1.7.1")
bazel_dep(name = "tar.bzl", version = "0.5.5")

# External SONiC dependencies
bazel_dep(name = "sonic-py-common", version = "0.0.0")
local_path_override(
    module_name = "sonic-py-common",
    path = "../sonic-buildimage/src/sonic-py-common",
)

bazel_dep(name = "sonic-config-engine", version = "0.0.0")
local_path_override(
    module_name = "sonic-config-engine",
    path = "../sonic-buildimage/src/sonic-config-engine",
)

bazel_dep(name = "sonic-py-swsssdk", version = "0.0.0")
local_path_override(
    module_name = "sonic-py-swsssdk",
    path = "../sonic-py-swsssdk",
)

bazel_dep(name = "sonic-swss-common", version = "0.0.0")
local_path_override(
    module_name = "sonic-swss-common",
    path = "../sonic-swss-common",
)

bazel_dep(name = "sonic-build-infra", version = "0.0.0")
local_path_override(
    module_name = "sonic-build-infra",
    path = "../sonic-build-infra",
)

bazel_dep(name = "rules_distroless", version = "0.0.0")
local_path_override(
    module_name = "rules_distroless",
    path = "../rules_distroless",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.11.6",
)

uv = use_extension("@aspect_rules_py//uv/unstable:extension.bzl", "uv")

uv.declare_hub(hub_name = "platform_common_pip")

uv.declare_venv(
    hub_name = "platform_common_pip",
    venv_name = "default",
)

uv.lockfile(
    hub_name = "platform_common_pip",
    venv_name = "default",
    src = "//:uv.lock",
)

use_repo(uv, "platform_common_pip")
