load("@aspect_rules_py//py:defs.bzl", "py_library")

filegroup(
    name = "files",
    srcs = glob(["**/*.py"]) + glob(["**/*.json"], allow_empty = True),
    visibility = ["//visibility:public"],
)

py_library(
    name = "sonic_y_cable",
    srcs = glob(["**/*.py"]),
    imports = [".."],
    visibility = ["//visibility:public"],
)
